--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,56 @@
-.container {
-    width: 1200px;
-    margin: 0 auto;
+html, body {
+    height: 100%;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-content {
+    flex: 1;
+}
+
+/*catalog*/
+
+.catalog {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+/*    margin-right: 30px;*/
+    text-align: center;
+    outline: 1px solid grey;
+    margin: 0 0 30px 30px;
+}
+
+.item img {
+    width: 200px;    
+}
+
+/*product*/
 
 .item-content img {
     width: 300px;
+}
+
+/*contact*/
+
+form {
+    width: 300px;
+}
+
+form label {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
